@@ -23,6 +23,9 @@ PHP                                                                        NEWS
   . Fixed bug GH-14286 (ffi enum type (when enum has no name) make memory
     leak). (nielsdos, dstogov)
 
+- Hash:
+  . Fix crash when converting array data for array in shm in xxh3. (nielsdos)
+
 - Intl:
   . Fixed bug GH-15087 (IntlChar::foldCase()'s $option is not optional). (cmb)
 
